--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,19 +95,24 @@ h4 {
 /*  -- Module Style */
 
 /* 
-  Component Style 
-***********************/
-
-/* 
   Generic Style 
 ***********************/
-
 body {
   border: 1px solid red;
 }
 
+.wrapper {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .main-header {
-  margin-top: 50px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.menu {
+  display: none;
 }
 
 .menu li {
@@ -129,6 +134,10 @@ body {
   box-shadow: 0px 5px 9px -2px rgba(132,92,255,0.5);
 }
 
+.hero-banner {
+  margin-bottom: 50px;
+}
+
 .hero-banner h2 {
   font: bold 4.8rem 'Conv_Brown Bold';
   color: #32325d;
@@ -138,6 +147,10 @@ body {
 @media only screen and (min-width: 768px) {
   body {
     border: 1px solid green;
+  }
+
+  .main-header {
+    margin-top: 50px;
   }
 
   .main-header::after {
@@ -151,9 +164,10 @@ body {
   }
 
   .menu {
+    display: block;
     float: right;
   }
-
+  
   .hero-banner {
     margin-top: 280px;
     width: 480px;
