next changes in file

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,12 @@ h4 {
   color: #32325d;
 }
 
+h5 {
+  font: normal 2.3rem 'Conv_BrownLight Regular';
+  margin-bottom: 40px; 
+  color: #32325d;
+}
+
 
 /* Button */
 .button {
@@ -180,7 +186,7 @@ body {
   }
 
   .wrapper {
-    width: 1220px;
+    width: 1235px;
     margin: 0 auto;
   }
 }
