--- a/assets/css/main-desktop.css
+++ b/assets/css/main-desktop.css
@@ -1,14 +1,11 @@
 /* Desktop CSS */
 @media only screen and (min-width: 1024px) {
-    body {
-      border: 1px solid blue;
-    }
   
     .wrapper {
       max-width: 1235px;
       margin: 0 auto;
     }
-  
+   
     /* promo list */
     .promo-list {
       margin-left: -100px;
@@ -78,25 +75,22 @@
       max-width: 100%;
     }
 
-    .services-drive li {
-      margin-bottom: 0;
-      width: 50%;
-      padding-right: 50px;
-      box-sizing: border-box;
-    }
-    
-    .services-drive li:first-child {
-      float: left;
-    }
-
-    .services-drive li:last-child {
-    float: right;
-    }
-
     .services-drive::after {
       content: "";
       display: block;
       clear: both;
+    }
+
+    .services-drive li {
+      margin-bottom: 0;
+      width: 50%;
+      padding-left: 50px;
+      box-sizing: border-box;
+      float: left;
+    }
+    
+    .services-drive li:first-child {
+      padding-left: 0;
     }
 
     /* contact-us */
@@ -138,55 +132,8 @@
       padding-bottom: 90px;
     }
 
-    .footer-contact {
-      float: left;
-    }
-
-    .footer-blog {
-      float: right;
-    }
-
-    .footer::after {
-      content: "";
-      display: block;
-      clear: both;
-    }
-
-    .footer-contact img {
-      margin-bottom: 50px;
-    }
-
-    .foter-contact > p {
-      margin-top: 100px;
-    }
-
-    .footer-list {
-      display: inline-block;
-      margin-left: 80px;
-      vertical-align: text-top;
-    }
-
-    .footer-list li {
-      margin-bottom: 20px;
-    }
-
-    .footer-blog {  
-      margin-right: 20px;
-    }
-
-    .footer-privacy {
-      margin-top: 100px;
-      float: right; 
-    }
-
-    .footer-privacylist {
-      margin-left: 700px;
-      margin-right: 20px;
-    }
-
-    .footer-privacylist li {
-      display: inline-block;
-      margin-left: 45px;
+    .footer-blog ul {
+      padding-right: 80px;
     }
 }
     
