--- a/assets/css/main-desktop.css
+++ b/assets/css/main-desktop.css
@@ -140,10 +140,18 @@
     }
 }
 
-@media only screen and (min-width: 1235px) {
+ @media only screen and (min-width: 1235px) {
   .wrapper {
     max-width: 1235px;
     margin: 0 auto;
+  }
+} 
+
+@media only screen and (min-width: 1916px) {
+  body {
+    background: transparent url('../images/banner-hero.png') no-repeat 50% 0;
+    background-size: auto;
+    border: 1px solid red;
   }
 }
     
